[package]
name = "xtswpr"
version = "1.2.15"
edition = "2024"
authors = ["XHBL <newxhbl@hotmail.com>"]
description = "A terminal-based classic Minesweeper game"
license = "MIT"
repository = "https://github.com/xhbl/RustApps/xtswpr"
readme = "README.md"

[dependencies]
term_color_support = "0.1"
crossterm = "0.26"
ratatui = { version = "0.20", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
directories = "5.0"
rand = "0.8"
chrono = "0.4"
unicode-width = "0.1"
